adicionando os exercicios restantes